pt-br/books/fdp-primer: Sync with en 90a1c09
Obtained from: https://translate-dev.freebsd.org

--- a/documentation/content/pt-br/books/fdp-primer/doc-build/_index.adoc
+++ b/documentation/content/pt-br/books/fdp-primer/doc-build/_index.adoc
@@ -1,7 +1,7 @@
 ---
 description: 'Descreve o Processo de Compilação da Documentação do FreeBSD'
 next: books/fdp-primer/asciidoctor-primer
-path: "/books/fdp-primer/doc-build/"
+path: /books/fdp-primer/doc-build/
 prev: books/fdp-primer/structure
 showBookMenu: 'true'
 tags: ["build", "process", "make"]
@@ -257,8 +257,8 @@ Este [.filename]#Makefile# suporta o seguinte:
 ....
 # Generate the FreeBSD documentation
 #
-# Copyright (c) 2020-2021, The FreeBSD Documentation Project
-# Copyright (c) 2020-2021, Sergio Carlavilla <carlavilla@FreeBSD.org>
+# Copyright (c) 2020-2025, The FreeBSD Documentation Project
+# Copyright (c) 2020-2025, Sergio Carlavilla <carlavilla@FreeBSD.org>
 #
 # Targets intended for use on the command line
 #
@@ -547,8 +547,8 @@ Este é o [.filename]#Makefile#:
 ....
 # Generate the FreeBSD website
 #
-# Copyright (c) 2020-2021, The FreeBSD Documentation Project
-# Copyright (c) 2020-2021, Sergio Carlavilla <carlavilla@FreeBSD.org>
+# Copyright (c) 2020-2025, The FreeBSD Documentation Project
+# Copyright (c) 2020-2025, Sergio Carlavilla <carlavilla@FreeBSD.org>
 #
 # Targets intended for use on the command line
 #
