--- a/documentation/content/pt-br/books/fdp-primer/doc-build/_index.po
+++ b/documentation/content/pt-br/books/fdp-primer/doc-build/_index.po
@@ -2,12 +2,12 @@
 # Copyright (C) YEAR The FreeBSD Project
 # This file is distributed under the same license as the FreeBSD Documentation package.
 # Danilo G. Baio <dbaio@FreeBSD.org>, 2021, 2022, 2023.
-# "Danilo G. Baio" <dbaio@FreeBSD.org>, 2023.
+# "Danilo G. Baio" <dbaio@FreeBSD.org>, 2023, 2025.
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2023-09-09 18:12-0300\n"
-"PO-Revision-Date: 2023-09-10 13:31+0000\n"
+"POT-Creation-Date: 2025-01-24 10:22-0300\n"
+"PO-Revision-Date: 2025-01-24 14:23+0000\n"
 "Last-Translator: \"Danilo G. Baio\" <dbaio@FreeBSD.org>\n"
 "Language-Team: Portuguese (Brazil) <https://translate-dev.freebsd.org/"
 "projects/documentation/booksfdp-primerdoc-build_index/pt_BR/>\n"
@@ -499,8 +499,8 @@ msgstr "Este [.filename]#Makefile# suporta o seguinte:"
 msgid ""
 "# Generate the FreeBSD documentation\n"
 "#\n"
-"# Copyright (c) 2020-2021, The FreeBSD Documentation Project\n"
-"# Copyright (c) 2020-2021, Sergio Carlavilla <carlavilla@FreeBSD.org>\n"
+"# Copyright (c) 2020-2025, The FreeBSD Documentation Project\n"
+"# Copyright (c) 2020-2025, Sergio Carlavilla <carlavilla@FreeBSD.org>\n"
 "#\n"
 "# Targets intended for use on the command line\n"
 "#\n"
@@ -522,12 +522,13 @@ msgid ""
 msgstr ""
 "# Generate the FreeBSD documentation\n"
 "#\n"
-"# Copyright (c) 2020-2021, The FreeBSD Documentation Project\n"
-"# Copyright (c) 2020-2021, Sergio Carlavilla <carlavilla@FreeBSD.org>\n"
+"# Copyright (c) 2020-2025, The FreeBSD Documentation Project\n"
+"# Copyright (c) 2020-2025, Sergio Carlavilla <carlavilla@FreeBSD.org>\n"
 "#\n"
 "# Targets intended for use on the command line\n"
 "#\n"
-"# all (default)\t-\tgenerate the books TOC and compile all the documentation\n"
+"# all (default)\t-\tgenerate the books TOC and compile all the "
+"documentation\n"
 "# clean\t\t- \tremoves generated files\n"
 "# run\t\t-\tserves the built documentation site for local browsing\n"
 "# pdf\t\t-\tbuild PDF versions of the articles and books.\n"
@@ -538,8 +539,10 @@ msgstr ""
 "#\t\t\tdirectory.\n"
 "# epub\t\t-\tbuild EPUB versions of the articles and books (Experimental).\n"
 "#\n"
-"# The run target uses hugo's built-in webserver to make the documentation site\n"
-"# available for local browsing.  The documentation should have been built prior\n"
+"# The run target uses hugo's built-in webserver to make the documentation "
+"site\n"
+"# available for local browsing.  The documentation should have been built "
+"prior\n"
 "# to attempting to use the `run` target.  By default, hugo will start its\n"
 "# webserver on port 1313.\n"
 
@@ -1307,8 +1310,8 @@ msgstr "Este é o [.filename]#Makefile#:"
 msgid ""
 "# Generate the FreeBSD website\n"
 "#\n"
-"# Copyright (c) 2020-2021, The FreeBSD Documentation Project\n"
-"# Copyright (c) 2020-2021, Sergio Carlavilla <carlavilla@FreeBSD.org>\n"
+"# Copyright (c) 2020-2025, The FreeBSD Documentation Project\n"
+"# Copyright (c) 2020-2025, Sergio Carlavilla <carlavilla@FreeBSD.org>\n"
 "#\n"
 "# Targets intended for use on the command line\n"
 "#\n"
@@ -1322,8 +1325,8 @@ msgid ""
 msgstr ""
 "# Generate the FreeBSD website\n"
 "#\n"
-"# Copyright (c) 2020-2021, The FreeBSD Documentation Project\n"
-"# Copyright (c) 2020-2021, Sergio Carlavilla <carlavilla@FreeBSD.org>\n"
+"# Copyright (c) 2020-2025, The FreeBSD Documentation Project\n"
+"# Copyright (c) 2020-2025, Sergio Carlavilla <carlavilla@FreeBSD.org>\n"
 "#\n"
 "# Targets intended for use on the command line\n"
 "#\n"
