fdp-primer/overview: Update instructions for MacOS
Approved by:	carlavilla
Differential Revision:	https://reviews.freebsd.org/D48681

--- a/documentation/content/en/books/fdp-primer/overview/_index.adoc
+++ b/documentation/content/en/books/fdp-primer/overview/_index.adoc
@@ -260,16 +260,10 @@ $ brew install hugo ruby git bmake
 +
 [source,shell]
 ....
-$ echo 'export GEM_PATH="$(gem environment gemdir)"' >> ~/.zshrc
 $ echo 'export PATH="$(brew --prefix ruby)/bin:$PATH"' >> ~/.zshrc
-$ source ~/.zshrc
-....
-+
-. Add git alias to Homebrew git since `git format-patch` from Apple-provided git won't work with Phabricator.
-+
-[source,shell]
-....
-$ echo 'alias git=/usr/local/bin/git' >> ~/.zshrc
+$ echo 'export PATH="$(brew --prefix hugo)/bin:$PATH"' >> ~/.zshrc
+$ echo 'export GEM_PATH="$(gem environment gemdir)"' >> ~/.zshrc
+$ echo 'export PATH="${GEM_PATH}/bin:$PATH"' >> ~/.zshrc
 $ source ~/.zshrc
 ....
 . Install the rouge package using RubyGem.
