New committer (ports): Austin Shafer (ashafer)
Complete steps 1-4 from the Committer's Guide, section 7.1 (For New
Committers):
1. Add an Author Entity.
2. Update the List of Developers and Contributors.
3. Add a News Item.
4. Add a PGP Key.

Approved by:	kbowling (mentor)
Differential Revision:	https://reviews.freebsd.org/D48694

--- a/documentation/content/en/articles/pgpkeys/_index.adoc
+++ b/documentation/content/en/articles/pgpkeys/_index.adoc
@@ -1209,6 +1209,9 @@ include::{include-path}syrinx.key[]
 === `{vanilla}`
 include::{include-path}vanilla.key[]
 
+=== `{ashafer}`
+include::{include-path}ashafer.key[]
+
 === `{ashish}`
 include::{include-path}ashish.key[]
 
