--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -255,6 +255,10 @@
 :asami-email: asami@FreeBSD.org
 :asami: {asami-name} <{asami-email}>
 
+:ashafer-name: Austin Shafer
+:ashafer-email: ashafer@FreeBSD.org
+:ashafer: {ashafer-name} <{ashafer-email}>
+
 :ashish-name: Ashish SHUKLA
 :ashish-email: ashish@FreeBSD.org
 :ashish: {ashish-name} <{ashish-email}>
