--- a/website/content/en/releases/13.4R/errata.adoc
+++ b/website/content/en/releases/13.4R/errata.adoc
@@ -59,9 +59,8 @@ For a list of all FreeBSD CERT security advisories, see https://www.FreeBSD.org/
 [width="100%",cols="40%,30%,30%",options="header",]
 |===
 |Errata |Date |Topic
-
-|No errata notices.||
-
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-25:02.audit.asc[FreeBSD-EN-25:02.audit] |29 January 2025 |System call auditing disabled by DTrace
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-25:03.tzdata.asc[FreeBSD-EN-25:03.tzdata] |29 January 2025 |Timezone database information update
 |===
 
 [[open-issues]]
