Add security advisories affecting 13.4R, 14.1R and 14.2R
FreeBSD-SA-25:01.openssh affects 14.1R
FreeBSD-SA-25:02.fs affects all supported releases
FreeBSD-SA-25:03.etcupdate affects all supported releases
FreeBSD-SA-25:04.ktrace affects 14.2R

--- a/website/content/en/releases/13.4R/errata.adoc
+++ b/website/content/en/releases/13.4R/errata.adoc
@@ -49,6 +49,8 @@ For a list of all FreeBSD CERT security advisories, see https://www.FreeBSD.org/
 |link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-24:17.bhyve.asc[FreeBSD-SA-24:17.bhyve] |29 October 2024 |Multiple issues in the bhyve hypervisor
 |link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-24:18.ctl.asc[FreeBSD-SA-24:18.ctl] |29 October 2024 |Unbounded allocation in ctl(4) CAM Target Layer
 |link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-24:19.fetch.asc[FreeBSD-SA-24:19.fetch] |29 October 2024 |Certificate revocation list fetch(1) option fails
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-25:02.fs.asc[FreeBSD-SA-25:02.fs] |29 January 2025 |Buffer overflow in some filesystems via NFS
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-25:03.etcupdate.asc[FreeBSD-SA-25:03.etcupdate] |29 January 2025 |Unprivileged access to system files
 |===
 
 [[errata]]
