HW Relnotes: Add umb(4) modems to Misc Networks
The umb(4) MIBM cellular modem driver was added in src:0f1bf1c22a0c.
Add it to the Release Hardware Notes template for inclusion in
FreeBSD 15.

Reviewed by:		adrian, mhorne
Accepted by:		mhorne (mentor)
Differential Revision:	https://reviews.freebsd.org/D48738

--- a/website/archetypes/release/hardware.adoc
+++ b/website/archetypes/release/hardware.adoc
@@ -592,6 +592,8 @@ Marvell 88W8363 IEEE 802.11n wireless network adapters (man:mwl[4] driver)
 
 &hwlist.u3g;
 
+&hwlist.umb;
+
 [[serial]]
 === Serial Interfaces
 
