Additional contributors: Add Chris Moerz
Chris contributes in many ways to the Project:
- he maintains some ports;
- he helps with status reports;
- works on the Enterprise Working Group;
- works on the Laptop and Desktop Workgroup;
- he has speaked at EuroBSDCon;
- he has worked on the handbook.

--- a/shared/contrib-additional.adoc
+++ b/shared/contrib-additional.adoc
@@ -366,6 +366,7 @@
 * Chris Knight <mailto:chris@e-easy.com.au[chris@e-easy.com.au]>
 * Chris Larsen <mailto:darth@vader.dk[darth@vader.dk]>
 * Chris Laverdure <mailto:dashevil@gmail.com[dashevil@gmail.com]>
+* Chris Moerz <mailto:freebsd@ny-central.org[freebsd@ny-central.org]>
 * Chris Pepper <mailto:pepper@mail.rockefeller.edu[pepper@mail.rockefeller.edu]>
 * Chris Pressey <mailto:chris_pressey@yahoo.ca[chris_pressey@yahoo.ca]>
 * Chris Shenton <mailto:cshenton@angst.it.hq.nasa.gov[cshenton@angst.it.hq.nasa.gov]>
