books/dev-model: Fix typo
PR:		276795
Reported by:	Paul Ivanov <pi@berkeley.edu>

--- a/documentation/content/en/books/dev-model/_index.adoc
+++ b/documentation/content/en/books/dev-model/_index.adoc
@@ -103,7 +103,7 @@ I would like to thank the following people for taking the time to explain things
 [[overview]]
 == Overview
 A project model is a means to reduce the communications overhead in a project.
-As shown by [crossref:dev-model[brooks, Brooks, 1995]], increasing the number of project participants increases the communication in the project exponentionally.
+As shown by [crossref:dev-model[brooks, Brooks, 1995]], increasing the number of project participants increases the communication in the project exponentially.
 FreeBSD has during the past few years increased both its mass of active users and committers, and the communication in the project has risen accordingly.
 This project model will serve to reduce this overhead by providing an up-to-date description of the project.
 
