website/platforms/amd64: Fix reference links
PR:		283739

--- a/website/content/en/platforms/amd64.adoc
+++ b/website/content/en/platforms/amd64.adoc
@@ -32,8 +32,8 @@ The AMD64 platform is a link:{committers-guide}#archs[Tier 1] FreeBSD platform.
 
 === AMD64 Documentation
 
-* https://www.amd.com/system/files/TechDocs/40332.pdf[AMD64 Architecture Programmer’s Manual Volumes 1–5]
-* https://www.intel.com/content/dam/develop/external/us/en/documents/mpx-linux64-abi.pdf[System V Application Binary Interface AMD64 Architecture Processor Supplement (With LP64 and ILP32 Programming Models)]
+* https://www.amd.com/content/dam/amd/en/documents/processor-tech-docs/programmer-references/40332.pdf[AMD64 Architecture Programmer’s Manual Volumes 1–5]
+* https://web.archive.org/web/20231031162945/www.intel.com/content/dam/develop/external/us/en/documents/mpx-linux64-abi.pdf[System V Application Binary Interface AMD64 Architecture Processor Supplement (With LP64 and ILP32 Programming Models)]
 
 === Related Projects
 
