--- a/documentation/content/en/books/handbook/mirrors/_index.adoc
+++ b/documentation/content/en/books/handbook/mirrors/_index.adoc
@@ -52,13 +52,17 @@ endif::[]
 == Mirrors
 
 The official mirrors of the FreeBSD project are made up of many machines operated by the project cluster administrators and behind GeoDNS to direct users to the closest available mirror.
-Current locations are Australia, Brazil, Germany, Japan (two sites), Malaysia, South Africa, Sweden, Taiwan, United Kingdom, United States of America (California, New Jersey, and Washington).
+Current locations are Australia, Brazil, Germany, Japan (two sites), Malaysia, South Africa, Sweden, Taiwan, United Kingdom, United States of America (California, Illinois - two sites, New Jersey, and Washington).
 
 Official mirrors service:
 
 [cols="1,1,3"]
 |===
 | Service Name | Protocols | More information
+
+| **cgit.FreeBSD.org**
+| link:https://cgit.FreeBSD.org/[https]
+| Web interface for the FreeBSD Git repositories.
 
 | **docs.FreeBSD.org**
 | link:https://docs.FreeBSD.org/[https]
