[phb]: Sync Uses=bdb with actual code
bdb6 was rcmoved long ago.

--- a/documentation/content/en/books/porters-handbook/uses/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/uses/_index.adoc
@@ -137,12 +137,13 @@ Adds dependencies on Blas / Lapack libraries.
 [[uses-bdb]]
 == `bdb`
 
-Possible arguments: (none), `48`, `5` (default), `6`
+Possible arguments: (none), `5` (default), `18`
 
 Add dependency on the Berkeley DB library.
 Default to package:databases/db5[].
-It can also depend on package:databases/db48[] when using the `:48` argument or package:databases/db6[] with `:6`.
-It is possible to declare a range of acceptable values, `:48+` finds the highest installed version, and falls back to 4.8 if nothing else is installed.
+It can also depend on package:databases/db18[] when using the `:18` argument.
+It is possible to declare a range of acceptable values, `:5+` finds the highest
+installed version, and falls back to 5 if nothing else is installed.
 `INVALID_BDB_VER` can be used to specify versions which do not work with this port.
 The framework exposes the following variables to the port:
 
@@ -164,7 +165,7 @@ For example, when using package:databases/db5[], it contains `${LOCALBASE}/lib`.
 
 `BDB_VER`::
 The detected Berkeley DB version.
-For example, if using `USES=bdb:48+` and Berkeley DB 5 is installed, it contains `5`.
+For example, if using `USES=bdb:5+` and Berkeley DB 18 is installed, it contains `18`.
 
 [IMPORTANT]
 ====
