[phb][Uses]: Add Uses=sdl
Differential Revision: https://reviews.freebsd.org/D48870

--- a/documentation/content/en/books/porters-handbook/uses/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/uses/_index.adoc
@@ -2330,6 +2330,44 @@ Possible arguments: (none)
 Provide support for the use of package:devel/scons[].
 See crossref:special[using-scons,Using `scons`] for more information.
 
+[[uses-sdl]]
+== `sdl`
+
+Possible arguments: `sdl`
+
+Provide support for the use of `SDL` packages.
+The variable `USE_SDL` is mandatory and specifies which components to add as
+dependencies.
+
+The current supported `SDL1.2` modules are:
+
+* sdl
+* console
+* gfx
+* image
+* mixer
+* mm
+* net
+* pango
+* sound
+* ttf
+
+The current supported `SDL2` modules are:
+
+ * sdl2
+ * gfx2
+ * image2
+ * mixer2
+ * net2
+ * sound2
+ * ttf2
+
+The current supported `SDL3` modules are:
+
+ * sdl3
+ * image3
+ * ttf3
+
 [[uses-shared-mime-info]]
 == `shared-mime-info`
 
