phb: Wordsmith LICENSE_PERMS warnings
Sponsored by:	Klara, Inc.

--- a/documentation/content/en/books/porters-handbook/makefiles/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/makefiles/_index.adoc
@@ -3206,7 +3206,7 @@ Some missing permissions will prevent a port (and all ports depending on it) fro
 
 A port without the `auto-accept` permission will never be be built and all the ports depending on it will be ignored.
 
-A port without the `pkg-mirror` permission will be removed, as well as all the ports depending on it, after the build and they will ever end up being distributed.
+A port without the `pkg-mirror` permission, and any ports that depend on it, will be removed after the build, thus ensuring they are not distributed.
 ====
 
 [[licenses-license_perms-ex1]]
