phb: Document new samba.mk variables
SAMBA_TALLOC_PORT, SAMBA_TDB_PORT, and SAMBA_TEVENT_PORT.

Sponsored by:	Klara, Inc.

--- a/documentation/content/en/books/porters-handbook/uses/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/uses/_index.adoc
@@ -2029,6 +2029,18 @@ The directory where the Samba shared libraries are available.
 The origin of the ldb port used by the selected Samba version (e.g., package:databases/ldb28[]).
 It should be used if a port needs to depend on the same ldb version as the selected Samba version.
 
+`SAMBA_TALLOC_PORT`::
+The origin of the talloc port used by the selected Samba version.
+It should be used if a port needs to depend on the same talloc version as the selected Samba version.
+
+`SAMBA_TDB_PORT`::
+The origin of the TDB port used by the selected Samba version.
+It should be used if a port needs to depend on the same TDB version as the selected Samba version.
+
+`SAMBA_TEVENT_PORT`::
+The origin of the tevent port used by the selected Samba version.
+It should be used if a port needs to depend on the same tevent version as the selected Samba version.
+
 [[uses-scons]]
 == `scons`
 
