[phb]: Add missing Uses=ansible

--- a/documentation/content/en/books/porters-handbook/uses/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/uses/_index.adoc
@@ -139,6 +139,48 @@ The tagname of the `angr` binaries.
 `ANGR_NOSETESTS`::
 The path to the `nosetests` program.
 
+[[uses-ansible]]
+== `ansible`
+
+Possible arguments: `env`, `module`, `plugin`
+
+Provide support for ports depending on package:sysutils/ansible[].
+
+If the `env` argument is present, the port does not depend on
+package:sysutils/ansible[] but needs some Ansible variables set.
+
+If the `module` argument is present then the port is an Ansible module.
+
+If the `plugin` argument is present then the port is an Ansible plugin.
+
+The framework exposes the following variables to the port:
+
+`ANSIBLE_CMD`::
+Path to the ansible program.
+
+`ANSIBLE_DOC_CMD`::
+Path to the ansible-doc program.
+
+`ANSIBLE_RUN_DEPENDS`::
+RUN_DEPENDS with the Ansible port.
+
+`ANSIBLE_DATADIR`::
+Path to the root of the directory structure where all Ansible's modules and plugins are stored.
+
+`ANSIBLE_ETCDIR`::
+Path to the Ansible etc directory.
+
+`ANSIBLE_PLUGINS_PREFIX`::
+Path to the "plugins" directory within `${ANSIBLE_DATADIR}`.
+`ANSIBLE_MODULESDIR`::
+Path to the directory for local Ansible modules.
+
+`ANSIBLE_PLUGINSDIR`::
+Path to the directory for local Ansible plugins.
+
+`ANSIBLE_PLUGIN_TYPE`::
+Ansible plugin type (e.g., "connection", "inventory", or "vars").
+
 [[uses-autoreconf]]
 == `autoreconf`
 
