--- a/website/content/en/releases/14.2R/hardware.adoc
+++ b/website/content/en/releases/14.2R/hardware.adoc
@@ -3866,17 +3866,22 @@ driver supports audio devices based on the following chipset:
 [[usb]]
 === USB Devices
 
-[amd64, i386] A range of USB peripherals are supported; devices known to work are listed in this section.
+A range of USB peripherals are supported; devices known to work are listed in this section.
 Owing to the generic nature of most USB devices, with some exceptions any device of a given class will be supported, even if not explicitly listed here.
 
 [NOTE]
 ====
-[amd64, i386] USB Ethernet adapters can be found in the section listing <<ethernet,Ethernet interfaces>>.
+USB network interfaces can be found in <<ethernet,Ethernet Interfaces>> or <<wlan,Wireless Network Interfaces>>.
 ====
 
 [NOTE]
 ====
-[amd64, i386] USB Bluetooth adapters can be found in <<bluetooth,Bluetooth>> section.
+USB Bluetooth adapters can be found in <<bluetooth,Bluetooth>>.
+====
+
+[NOTE]
+====
+USB human interface devices can be found in <<misc,Miscellaneous>>.
 ====
 
 Altera University Program Secure Data Card IP Core (man:altera_sdcard[4] driver)
@@ -4014,8 +4019,6 @@ Most Windows CE based phones
 
 [amd64, i386] Hubs
 
-[amd64, i386] Keyboards (man:ukbd[4] driver)
-
 [amd64, i386] Miscellaneous
 
 * Assist Computer Systems PC Camera C-M1
@@ -4050,8 +4053,6 @@ driver include:
 *	Sony Ericsson W810i phone
 *	Sonim XP5300 Force
 
-
-[amd64, i386] Mice (man:ums[4] driver)
 
 
 The
@@ -4475,10 +4476,32 @@ SafeNet 1741
 [[misc]]
 === Miscellaneous
 
-[amd64, i386] FAX-Modem/PCCARD
+Keyboards including:
 
-* MELCO IGM-PCM56K/IGM-PCM56KH
-* Nokia Card Phone 2.0 (gsm900/dcs1800 HSCSD terminal)
+* HID keyboards (man:hkbd[4] driver) over USB, I2C, or Apple SPI
+* USB keyboards (man:ukbd[4] driver)
+* PS/2 keyboards (man:atkbd[4] driver)
+* ADB keyboards (man:akbd[4] driver)
+* AT-style keyboards (man:atkbd[4] driver)
+* Hyper-v keyboards (**hv_kbd** driver)
+
+Pointing devices including:
+
+* HID mice (man:hms[4] driver) and touch devices (man:hmt[4] driver)
+over USB, I2C, Hyper-V, or Apple SPI
+* USB mice (man:ums[4] driver) and touch devices (man:wmt[4] driver)
+* Apple laptop trackpads (man:wsp[4] or man:apt[4] drivers)
+* Elantech I2C touchpads (man:ietp[4] driver)
+* Chromebook Cypress APA I2C touchpads (man:cyapa[4] driver)
+* PS/2 mice and compatible devices,
+including many laptop pointing devices (man:psm[4] driver)
+* ADB mice and touch devices (man:ams[4] driver)
+* Serial mice and compatible devices
+
+[NOTE]
+====
+man:moused[8] has more information on using traditional pointing devices with the FreeBSD console.
+====
 
 [amd64, i386] Floppy drives (man:fdc[4] driver)
 
@@ -4487,24 +4510,6 @@ SafeNet 1741
 [NOTE]
 ====
 Information regarding specific video cards and compatibility with Xorg can be found at link:http://www.x.org/[http://www.x.org/].
-====
-
-[amd64, i386] Keyboards including:
-
-* [i386] AT-style keyboards (man:atkbd[4] driver)
-* [amd64, i386] PS/2 keyboards (man:atkbd[4] driver)
-* [amd64, i386] USB keyboards (man:ukbd[4] driver)
-
-[amd64, i386] Pointing devices including:
-
-* [amd64, i386] PS/2 mice and compatible devices, including many laptop pointing devices (man:psm[4] driver)
-* Serial mice and compatible devices
-* [amd64, i386] USB mice (man:ums[4] driver)
-
-[NOTE]
-====
-man:moused[8] has more information on using pointing devices with FreeBSD.
-Information on using pointing devices with Xorg can be found at link:http://www.x.org/[http://www.x.org/].
 ====
 
 [amd64, i386] "PC standard" parallel ports (man:ppc[4] driver)
