[phb][Uses]: Add missing Uses=azurepy
Differential Revision: https://reviews.freebsd.org/D48913

--- a/documentation/content/en/books/porters-handbook/uses/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/uses/_index.adoc
@@ -193,6 +193,14 @@ If [.filename]#configure.ac# defines subdirectories with their own [.filename]#c
 The `:build` argument only adds build time dependencies on those tools but does not run `autoreconf`.
 A port can set `AUTORECONF_WRKSRC` if `WRKSRC` does not contain the path to [.filename]#configure.ac#.
 
+[[uses-azurepy]]
+== `azurepy`
+
+Possible arguments: (none)
+
+Provide support for `py-azure*` ports.
+Removes `azure` namespaces and cleans up common files.
+
 [[uses-blaslapack]]
 == `blaslapack`
 
