[phb][Uses]: Add missing Uses=electronfix

--- a/documentation/content/en/books/porters-handbook/uses/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/uses/_index.adoc
@@ -554,6 +554,24 @@ Possible arguments: 2, 3, build (default), run
 
 Add dependency on package:math/eigen[].
 
+[[uses-elextronfix]]
+== `electronfix`
+
+Possible arguments: `31`, `32`, `33`
+
+Provide support for easy porting of Electron applications that are distributed in binary form.
+Adds a build and run time dependency on package:devel/electron31[],
+package:devel/electron32[], or package:devel/electron33[] depending on the argument used.
+
+The framework provides the following variables that can be set by ports:
+
+`ELECTRONFIX_SYMLINK_FILES`::
+List of files to be symlinked from Electron distribution.
+
+`ELECTRONFIX_MAIN_EXECUTABLE`::
+File name of the main executable to be replaced with the original Electron binary.
+
+
 [[uses-elfctl]]
 == `elfctl`
 
