handbook: Remove mount_procfs(8) from basics

--- a/documentation/content/en/books/handbook/basics/_index.adoc
+++ b/documentation/content/en/books/handbook/basics/_index.adoc
@@ -1129,7 +1129,7 @@ The following table provides a brief overview of the most common directories.
 |Automounted NFS shares; see man:auto_master[5]
 
 |`/proc/`
-|Process file system. Refer to man:procfs[5], man:mount_procfs[8] for details.
+|Process file system. Refer to man:procfs[5] for details.
 
 |`/rescue/`
 |Statically linked programs for emergency recovery as described in man:rescue[8].
