where.adoc: stable/13 is now 13.5
With hat:	re@
Sponsored by:	Amazon

--- a/shared/releases.adoc
+++ b/shared/releases.adoc
@@ -119,6 +119,9 @@
 :u-rel140-readme: https://www.FreeBSD.org/releases/{rel140-current}R/readme/
 :u-rel140-signatures: https://www.FreeBSD.org/releases/{rel140-current}R/signatures/
 
+:rel135-current-major: 13
+:rel135-current: 13.5
+
 :rel134-current-major: 13
 :rel134-current: 13.4
 :rel134-current-date: September 17, 2024
