[phb][Uses]: Add missing Uses=fpc

--- a/documentation/content/en/books/porters-handbook/uses/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/uses/_index.adoc
@@ -661,6 +661,18 @@ Possible arguments: `gcc` (default)
 
 Uses the GNU Fortran compiler.
 
+[[uses-fpc]]
+== `fpc`
+
+Possible arguments: (none), `run`
+
+Provide support for Free Pascal based ports. It will install Free Pascal
+compiler and units.
+
+Adds a build dependency on package:lang/fpc[].
+
+If the `run` argument is given a run dependency is also added.
+
 [[uses-fuse]]
 == `fuse`
 
