--- a/website/content/en/status/report-2024-10-2024-12/appjail.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/appjail.adoc
@@ -2,8 +2,8 @@
 
 Links: +
 link:https://github.com/DtxdF/AppJail[AppJail on Github] URL: link:https://github.com/DtxdF/AppJail[] +
-link:https://github.com/DtxdF/Director[Director on Github] URL: link:https://github.com/DtxdF/Director[]
-link:https://github.com/DtxdF/LittleJet[LittleJet on Github] URL: link:https://github.com/DtxdF/LittleJet[]
+link:https://github.com/DtxdF/Director[Director on Github] URL: link:https://github.com/DtxdF/Director[] +
+link:https://github.com/DtxdF/LittleJet[LittleJet on Github] URL: link:https://github.com/DtxdF/LittleJet[] +
 link:https://github.com/DtxdF/reproduce[Reproduce on Github] URL: link:https://github.com/DtxdF/reproduce[]
 
 Contact: Jesús Daniel Colmenares Oviedo <DtxdF@disroot.org>
