--- a/website/content/en/status/report-2024-10-2024-12/installer.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/installer.adoc
@@ -4,7 +4,7 @@ Links: +
 link:https://wiki.freebsd.org/SummerOfCode2024Projects/ImprovingRepairAbilityOfTheFreeBSDInstaller[Improving Repair Ability of the FreeBSD Installer] URL: link:https://wiki.freebsd.org/SummerOfCode2024Projects/ImprovingRepairAbilityOfTheFreeBSDInstaller[] +
 link:https://github.com/freebsd/freebsd-src/pull/1395[GSoC 2024 - Improving Installer with Repair and Upgrade Ability (#1395)] URL: link:https://github.com/freebsd/freebsd-src/pull/1395[] +
 link:https://github.com/freebsd/freebsd-src/pull/1424[bsdinstall: Add pkg install support in live env (#1424)] URL: link:https://github.com/freebsd/freebsd-src/pull/1424[] +
-link:https://github.com/freebsd/freebsd-src/pull/1427[bsdinstall: Add repair scripts to installer menu (#1427)] URL: link:https://github.com/freebsd/freebsd-src/pull/1427[]
+link:https://github.com/freebsd/freebsd-src/pull/1427[bsdinstall: Add repair scripts to installer menu (#1427)] URL: link:https://github.com/freebsd/freebsd-src/pull/1427[] +
 link:https://wiki.freebsd.org/LaptopDesktopWorkingGroup[Laptop and Desktop Working Group] URL: link:https://wiki.freebsd.org/LaptopDesktopWorkingGroup[]
 
 Contact: Pierre Pronchery <pierre@freebsdfoundation.org>
