--- a/website/content/en/status/report-2024-10-2024-12/syzkaller.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/syzkaller.adoc
@@ -3,7 +3,7 @@
 Links: +
 link:https://github.com/google/syzkaller[google/syzkaller] URL: link:https://github.com/google/syzkaller[] +
 
-Contact: Jian-Lin Li <ljianlin99@gmail.com>
+Contact: Jian-Lin Li <ljianlin99@gmail.com> +
 Contact: Li-Wen Hsu <lwhsu@FreeBSD.org>
 
 Syzkaller is an operating system kernel fuzzer that can look for vulnerabilities in the kernel.
