--- a/website/content/en/status/report-2024-10-2024-12/wireless-iwx.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/wireless-iwx.adoc
@@ -1,6 +1,6 @@
 === Wireless Update
 
-Contact: Tom Jones <thj@FreeBSD.org>
+Contact: Tom Jones <thj@FreeBSD.org> +
 Contact: The FreeBSD wireless mailing list <wireless@FreeBSD.org>
 
 With Support from the FreeBSD Foundation this quarter I started working on porting the iwx WiFi driver from OpenBSD (via Haiku).
