[phb][Uses]: Add missing Uses=jpeg

--- a/documentation/content/en/books/porters-handbook/uses/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/uses/_index.adoc
@@ -1252,6 +1252,33 @@ The directory where a port should install JAR files.
 `JAVALIBDIR`::
 The directory where JAR files installed by other ports are located.
 
+[[uses-jpeg]]
+== `jpeg`
+
+Possible arguments: `lib` (default, implicit), `build`, `run`
+
+Help handling dependencies on `jpeg`.
+
+If the `lib` argument is provided or no arguments are provided then a lib
+dependency is added to the port.
+
+If the `build` argument is provided then a build dependency is added to the
+port.
+
+If the `run` argument is provided then a run dependency is added to the
+port.
+
+If the `both` argument is provided then a build dependency and a run dependency
+are added to the port.
+
+The framework provides the following variable that can be set by ports:
+
+`JPEG_PORT`::
+Specifies the JPEG implementation to use. Possible values are:
+
+* package:graphics/jpeg-turbo[] (default)
+* package:graphics/mozjpeg[]
+
 [[uses-kde]]
 == `kde`
 
