--- a/shared/releases.adoc
+++ b/shared/releases.adoc
@@ -52,7 +52,7 @@
 
 // Set to 'INCLUDE' when the schedule is available.
 
-:beta2-upcoming: IGNORE
+:beta2-upcoming: INCLUDE
 
 // Set to 'INCLUDE' when the installation images are available.
 
@@ -121,15 +121,15 @@
 
 :rel135-current-major: 13
 :rel135-current: 13.5
-:rel135-current-date: March 11, 2025
+//:rel135-current-date: March 11, 2025
 
-:u-rel135-notes: https://www.FreeBSD.org/releases/{rel135-current}R/relnotes/
-:u-rel135-announce: https://www.FreeBSD.org/releases/{rel135-current}R/announce/
-:u-rel135-errata: https://www.FreeBSD.org/releases/{rel135-current}R/errata/
-:u-rel135-hardware: https://www.FreeBSD.org/releases/{rel135-current}R/hardware/
-:u-rel135-installation: https://www.FreeBSD.org/releases/{rel135-current}R/installation/
-:u-rel135-readme: https://www.FreeBSD.org/releases/{rel135-current}R/readme/
-:u-rel135-signatures: https://www.FreeBSD.org/releases/{rel135-current}R/signatures/
+//:u-rel135-notes: https://www.FreeBSD.org/releases/{rel135-current}R/relnotes/
+//:u-rel135-announce: https://www.FreeBSD.org/releases/{rel135-current}R/announce/
+//:u-rel135-errata: https://www.FreeBSD.org/releases/{rel135-current}R/errata/
+//:u-rel135-hardware: https://www.FreeBSD.org/releases/{rel135-current}R/hardware/
+//:u-rel135-installation: https://www.FreeBSD.org/releases/{rel135-current}R/installation/
+//:u-rel135-readme: https://www.FreeBSD.org/releases/{rel135-current}R/readme/
+//:u-rel135-signatures: https://www.FreeBSD.org/releases/{rel135-current}R/signatures/
 
 :rel134-current-major: 13
 :rel134-current: 13.4
