--- a/website/content/en/releases/13.5R/schedule.adoc
+++ b/website/content/en/releases/13.5R/schedule.adoc
@@ -37,7 +37,7 @@ General discussions about the pending release and known issues should be sent to
 |Code slush begins |24 January 2025 |24 January 2025 |Release Engineers announce that all further commits to the {localBranchStable} branch will not require explicit approval, however new features should be avoided.
 |{localBranchReleng} branch |7 February 2025 |7 February 2025 |{localBranchReleng} branch created; future release engineering proceeds on this branch.
 |BETA1 builds begin |7 February 2025 |7 February 2025 |First beta test snapshot.
-|BETA2 builds begin |14 February 2025 |- |Second beta test snapshot.
+|BETA2 builds begin |14 February 2025 |14 February 2025 |Second beta test snapshot.
 |BETA3 builds begin |21 February 2025 |- |Third beta test snapshot.
 |RC1 builds begin |28 February 2025 |- |First release candidate.
 |RELEASE builds begin |7 March 2025 |- |{localRel}-RELEASE builds begin.
