Status/2024Q4/intro.adoc: Fix typo

--- a/website/content/en/status/report-2024-10-2024-12/intro.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/intro.adoc
@@ -6,7 +6,7 @@ We still managed to deliver and see great progress on so many things!
 
 Collecting and compiling this report took longer than planned, but it was worth the wait.
 
-Thank you to the whole community for your amazing work and an espacially big thanks to those who contributed updates to this report!
+Thank you to the whole community for your amazing work and an especially big thanks to those who contributed updates to this report!
 
 Enjoy the read!
 
