--- a/documentation/content/en/books/porters-handbook/uses/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/uses/_index.adoc
@@ -1419,6 +1419,15 @@ Fills in the boilerplate for kernel module ports, currently:
 * Handle cross-referencing kernel modules upon installation and deinstallation, using crossref:plist[plist-keywords-kld,`@kld`].
 * If the `debug` argument is given, the port can install a debug version of the module into [.filename]#KERN_DEBUGDIR#/[.filename]#KMODDIR#. By default, `KERN_DEBUGDIR` is copied from `DEBUGDIR` and set to [.filename]#/usr/lib/debug#. The framework will take care of creating and removing any required directories.
 
+[[uses-kodi]]
+== `kodi`
+
+Possible arguments: (none), `noautoplist`
+
+Provide support for package:multimedia/kodi[] add-ons.
+If the `noautoplist` argument is provided it does not generate the `plist`
+automatically.
+
 [[uses-ldap]]
 == `ldap`
 
