[phb][Uses]: Add missing Uses=lazarus
Reviewed by:		acm
Differential Revision:	https://reviews.freebsd.org/D49034

--- a/documentation/content/en/books/porters-handbook/uses/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/uses/_index.adoc
@@ -1428,6 +1428,52 @@ Provide support for package:multimedia/kodi[] add-ons.
 If the `noautoplist` argument is provided it does not generate the `plist`
 automatically.
 
+[[uses-lazarus]]
+== `lazarus`
+
+Possible arguments: (none), `gtk2` (default), `qt5`, `qt6`, `flavors`
+
+Provide support for package:editors/lazarus[] based ports.
+
+If no arguments are provided or if `gtk2` is provided the lazarus-app is built with
+a `gtk2` interface the package:editors/lazarus[] port will be built with the `gtk2`
+interface.
+
+If the `qt5` argument is provided, the lazarus-app is built with a `qt5`
+interface.
+
+If the `qt6` argument is provided, the lazarus-app is built with a `qt6`
+interface.
+
+If the `flavors` argument is provided the lazarus-app is built with flavors
+feature.
+
+If the port does not require compiling lazarus project files automatically, the
+following variable can be defined:
+
+`NO_LAZBUILD`=  `yes`
+
+The following variables are available for ports:
+
+`LAZARUS_PROJECT_FILES`::
+List of lpi files. It must not be empty.  Default: empty
+
+`LAZARUS_DIR`::
+Path to lazarus installation directory
+Default: [.filename]#${LOCALBASE}/share/lazarus-${LAZARUS_VER}#
+
+`LAZBUILD_ARGS`::
+lazbuild extra args. It could be `-d` in most of cases.
+See man:lazbuild[1] for more information.
+Default: empty
+
+`LAZARUS_NO_FLAVORS`::
+Do not build these lazarus flavors.
+If `LAZARUS_NO_FLAVORS` is not defined then all valid lazarus flavors are assumed.
+
+`WANT_LAZARUS_DEVEL`::
+If set to `yes` then use package:lazarus/devel[] as build dependency.
+
 [[uses-ldap]]
 == `ldap`
 
