[phb][Uses]: Add missing Uses=mlt
Reviewed by:		makc@
Differential Revision:	https://reviews.freebsd.org/D49035

--- a/documentation/content/en/books/porters-handbook/uses/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/uses/_index.adoc
@@ -1773,6 +1773,16 @@ Possible arguments: (none), `ng`
 
 Adds a library dependency on package:archivers/minizip[] or package:archivers/minizip-ng[] respectively.
 
+[[uses-mlt]]
+== `mlt`
+
+Possible arguments: `7`, `nodepend`
+
+Provide support for ports depending on package:multimedia/mlt7[].
+
+If the `nodepend` argument is provided no library dependency is generated. This
+argument only makes sense for multimedia/mlt7* ports.
+
 [[uses-mysql]]
 == `mysql`
 
